<resources>
    <string name="app_name">Rate My Animal</string>
    <string name="Rate_Title">Rate Your Favorite Animal</string>
    <string name="Favorite_Instructions">Tap an animal name below to rate your favorite</string>
    <string name="Recent_Rate_Text">The most recently rated animal</string>
    <string name="Recently_Rated_Animal_Name">Animal</string>
    <string name="Rating_Text">Rating:</string>
    <string name="Reset_Button">Clear All Ratings</string>
    <string name="Animal_Name">Animal</string>
    <string name="Rating_Question">What is your Rating? </string>
    <string name="Save_Button">Save Rating</string>
</resources>