<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="11dp"
        android:text="@string/Rate_Title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="19dp"
        android:text="@string/Favorite_Instructions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ListView
        android:id="@+id/animal_listView"
        android:layout_width="402dp"
        android:layout_height="266dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" >

    </ListView>

    <Button
        android:id="@+id/Reset_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="#C1794B"
        android:onClick="clearButton"
        android:text="@string/Reset_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostRecentLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mostRecentLayout"
        android:layout_width="398dp"
        android:layout_height="208dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animal_listView"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="24dp"
            android:text="@string/Recent_Rate_Text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/Animal_Image2"
            android:layout_width="156dp"
            android:layout_height="135dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="12dp"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/bear"
            tools:srcCompat="@drawable/bear" />

        <TextView
            android:id="@+id/mostRecentAnimalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/Recently_Rated_Animal_Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/Animal_Image2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:text="@string/Rating_Text"
            app:layout_constraintStart_toEndOf="@+id/Animal_Image2"
            app:layout_constraintTop_toBottomOf="@+id/mostRecentAnimalText" />

        <RatingBar
            android:id="@+id/ratingBar1"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="81dp"
            android:layout_height="24dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="68dp"
            android:numStars="5"
            android:rating="-1"
            android:stepSize=".5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>